--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
